# learnopengl-in-c

./: .gitignore  .gitmodules  CMakeLists.txt  buildlibs.sh  demo  readme.md  triangle
data/shaders/: transform.vs
data/shaders/es/: triangle.fs  triangle.vs
docs/: index.data  index.js  index.wasm
examples/: CMakeLists.txt  demo.c  main.c  triangle copy.c  triangle.c
examples/data/shaders/core/: triangle.fs  triangle.vs
examples/data/shaders/es/: triangle.fs  triangle.vs
include/: polyfill.h
include/breakout/: BallObject.h  Breakout.h  Collision-private.h  Collision.h  Game-private.h  Game.h  GameLevel.h  GameObject.h  Particle.h  ParticleGenerator.h
libs/artemis/: CMakeLists.txt  readme.md
libs/artemis/include/: ecs.h
libs/artemis/include/core/: aspect-private.h  aspect.h  component-private.h  component.h  componentmanager-private.h  componentmanager.h  componenttype-private.h  componenttype.h  componenttypefactory-private.h  componenttypefactory.h  entity-private.h  entity.h  entitymanager-private.h  entitymanager.h  entityobserver-private.h  entityobserver.h  entitysystem-private.h  entitysystem.h  manager-private.h  manager.h  world-private.h  world.h
libs/artemis/include/managers/: groupmanager-private.h  groupmanager.h  playermanager-private.h  playermanager.h  tagmanager-private.h  tagmanager.h  teammanager-private.h  teammanager.h
libs/artemis/include/systems/: delayedentityprocessingsystem-private.h  delayedentityprocessingsystem.h  entityprocessingsystem-private.h  entityprocessingsystem.h  intervalentityprocessingsystem-private.h  intervalentityprocessingsystem.h  intervalentitysystem-private.h  intervalentitysystem.h  voidentitysystem-private.h  voidentitysystem.h
libs/artemis/src/: ecs.h
libs/artemis/src/core/: aspect.c  component.c  component.h  componentmanager.c  componentmanager.h  componenttype.c  componenttype.h  componenttypefactory.c  componenttypefactory.h  entity.c  entity.h  entitymanager.c  entitymanager.h  entityobserver.c  entityobserver.h  entitysystem.c  entitysystem.h  manager.c  manager.h  template.h  world.c  world.h
libs/artemis/src/managers/: groupmanager.c  groupmanager.h  playermanager.c  playermanager.h  tagmanager.c  tagmanager.h  teammanager.c  teammanager.h
libs/artemis/src/systems/: delayedentityprocessingsystem.c  delayedentityprocessingsystem.h  entityprocessingsystem.c  entityprocessingsystem.h  intervalentityprocessingsystem.c  intervalentityprocessingsystem.h  intervalentitysystem.c  intervalentitysystem.h  voidentitysystem.c  voidentitysystem.h
libs/cfw/: CMakeLists.txt
libs/cfw/include/: bitset.h  bitvector.h  cfw.h  mt19937ar-private.h  mt19937ar.h  random.h  unit.h  uuid-private.h  uuid.h
libs/cfw/src/: bitset.c  bitvector.c  cfw.c  mt19937ar.c  random.c  uuid.c
libs/dna/: CMakeLists.txt
libs/dna/include/: arrayrenderer-private.h  arrayrenderer.h  dna.h  elementrenderer-private.h  elementrenderer.h  filesystem.h  game-private.h  game.h  object.h  rect.h  resourcemanager-private.h  resourcemanager.h  shader-private.h  shader.h  texture2d-private.h  texture2d.h  tglm.h
libs/dna/src/: arrayrenderer.c  elementrenderer.c  filesystem.c  game.c  resourcemanager.c  shader.c  texture2d.c  tglm.c
libs/util/: CMakeLists.txt  readme.md
libs/util copy/include/: bitset.h  mt19937ar.h
libs/util copy/src/: bitset.c  uuid.c
libs/util-delete/: CMakeLists.txt
libs/util-delete/include/: bitset-private.h  bitset.h  uuid.h
libs/util-delete/src/: bitset.c  mt19937ar.c
libs/util/include/: bitset-private.h  util.h
libs/util/src/: bitset.c
src/: demo.c  demo.cpp  linmath.h  main copy.c  main.c  polyfill.c  shmupwarz copy.c  shmupwarz-private.h  shmupwarz.c  shmupwarz.h  triangle-working.c  triangle.c  triangle.h
src/breakout/: BallObject.c  Collision.c  Game.c  GameLevel.c  GameObject.c  Particle.c  ParticleGenerator.c  main.c
src/oop/: animal.c  animal.h  cat.c  cat.h  dog.c  dog.h
tests/: CMakeLists.txt  test_bitset.h  test_bitvector.c  test_bitvector.h  test_cfw.c  test_cfw.h  test_oop.c  test_random.c  test_random.h  test_uuid.c  test_uuid.h  tests.h  unit.h
tests/oop/: animal.c  animal.h  cat.c  cat.h  dog.c  dog.h
